fix auggie comments
- change return value of global cross camera filter (needs to be modifiable for sorting by timestamp later)
- fix comment for runAll() GlobalVisionFilterPipeline